frame/support/test/tests/construct_runtime_ui/undefined_event_part.stderr
error: `Pallet` does not have #[pallet::event] defined, perhaps you should remove `Event` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_event_part.rs:5:1
   |
5  |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
48 | / construct_runtime! {
49 | |     pub struct Runtime
50 | |     {
51 | |         System: frame_system expanded::{}::{Pallet, Call, Storage, Config<T>, Event<T>},
52 | |         Pallet: pallet expanded::{}::{Pallet, Event},
53 | |     }
54 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_event_check::is_event_part_defined` which comes from the expansion of the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `Event` in module `pallet`
  --> tests/construct_runtime_ui/undefined_event_part.rs:48:1
   |
48 | / construct_runtime! {
49 | |     pub struct Runtime
50 | |     {
51 | |         System: frame_system expanded::{}::{Pallet, Call, Storage, Config<T>, Event<T>},
52 | |         Pallet: pallet expanded::{}::{Pallet, Event},
53 | |     }
54 | | }
   | |_^ not found in `pallet`
   |
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
   |
1  + use frame_support_test::Event;
   |
1  + use frame_system::Event;
   |
